--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,13 +1,9 @@
-<!-- <script>
-    function myFunction(x) {
-      x.classList.toggle("change");
-    }
-    </script> -->
+
 <nav class="navbar navbar-top navbar-expand-md navbar-dark" id="navbar-main">
   <div class="container-fluid">
     <!-- Brand -->
-    <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" routerLinkActive="active"
-      [routerLink]="['/dashboard']">{{getTitle()}}</a>
+    <a class="h4 mb-0 text-white text-uppercase d-none d-lg-inline-block" 
+    ></a>
     <!-- Form -->
 
     <!-- User -->
