--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -24,29 +24,34 @@
                 </div>
           </div>
         </a>
+        
+
+
         <div class="dropdown-menu-arrow dropdown-menu-right" ngbDropdownMenu>
           <div class=" dropdown-header noti-title">
-            <h6 class="text-overflow m-0"></h6>
+            <h6 class="text-overflow m-0">Welcome {{type}} </h6>
+            
           </div>
-          <a routerLinkActive="active" routerLink="/userprofile" class="dropdown-item" [routerLink]="['/', 'userprofile']" *ngIf="type=='employee'">
+          <a routerLinkActive="active" class="dropdown-item" [routerLink]="['/', 'login']" *ngIf="!type">
+            <i class="ni ni-single-02"></i>
+            <span>login</span>
+          </a>
+          <a routerLinkActive="active" routerLink="/userprofile" class="dropdown-item"
+            [routerLink]="['/', 'userprofile']" *ngIf="type=='employee'">
             <i class="ni ni-single-02"></i>
             <span>My profile</span>
           </a>
-         
+
+
           <div class="dropdown-divider"></div>
-          <a (click)="logout()" class="dropdown-item">
+          <a (click)="logout()" class="dropdown-item" *ngIf="type=='employee' || type=='admin'">
             <i class="ni ni-user-run"></i>
-            <span>Logout1</span>
+            <span>Logout</span>
           </a>
         </div>
 
 
-        <!-- <div class="dropdown-divider"></div>
-        <a (click)="logout()"  *ngIf="type=='admin'" class="dropdown-item">
-          <i class="ni ni-user-run"></i>
-          <span>Logout</span>
-        </a>
-      </div> -->
+       
       </li>
     </ul>
     <!-- Collapse -->
@@ -69,14 +74,7 @@
       </div>
       <!-- Form -->
       <form class="mt-4 mb-3 d-md-none">
-        <!-- <div class="input-group input-group-rounded input-group-merge">
-          <input type="search" class="form-control form-control-rounded form-control-prepended" placeholder="Search" aria-label="Search">
-          <div class="input-group-prepend">
-            <div class="input-group-text">
-              <span class="fa fa-search"></span>
-            </div>
-          </div>
-        </div> -->
+      
       </form>
       <!-- Navigation -->
       <ul class="navbar-nav">
@@ -89,26 +87,7 @@
       </ul>
       <!-- Divider -->
       <hr class="my-3">
-      <!-- Heading -->
-      <!-- <h6 class="navbar-heading text-muted">Documentation</h6>
-      Navigation
-      <ul class="navbar-nav mb-md-3">
-        <li class="nav-item">
-          <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard-angular/documentation/tutorial">
-            <i class="ni ni-spaceship"></i> Getting started
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard-angular/documentation/colors">
-            <i class="ni ni-palette"></i> Foundation
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="https://demos.creative-tim.com/argon-dashboard-angular/documentation/alerts">
-            <i class="ni ni-ui-04"></i> Components
-          </a>
-        </li>
-      </ul> -->
+      
     </div>
   </div>
 </nav>
